--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@reacticons/ionicons": "^7.1.0",
     "autoprefixer": "^10.4.7",
     "custom-cursor-react": "^1.0.5",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
+    "lucide-react": "^0.484.0",
     "next": "^15.2.3",
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
@@ -21,6 +23,7 @@
     "react": "18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.3.4",
