--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chuks-react-portfolio",
+  "name": "chuks",
   "version": "3.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@reacticons/ionicons": "^7.1.0",
+    "@tailwindcss/vite": "^4.1.3",
     "autoprefixer": "^10.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "custom-cursor-react": "^1.0.5",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
@@ -20,20 +23,24 @@
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
     "postcss": "^8.4.13",
-    "react": "18.1.0",
+    "react": "^18.3.1",
     "react-datepicker": "^4.8.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.3.4",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "shadcn": "^2.4.0",
     "styled-components": "^5.3.5",
-    "tailwindcss": "^3.0.24",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
   }
