--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reacticons/ionicons": "^7.1.0",
     "@tailwindcss/vite": "^4.1.3",
     "autoprefixer": "^10.4.7",
@@ -18,8 +21,8 @@
     "custom-cursor-react": "^1.0.5",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
-    "lucide-react": "^0.484.0",
-    "next": "^15.2.3",
+    "lucide-react": "^0.511.0",
+    "next": "15.1.7",
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
     "postcss": "^8.4.13",
@@ -34,7 +37,7 @@
     "remark-html": "^15.0.1",
     "shadcn": "^2.4.0",
     "styled-components": "^5.3.5",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^8.3.2"
